--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
 flask==3.0.3
 gunicorn==20.1.0
+jupyter==1.0.0
+pandas==2.2.2
+numpy==2.0.0
+networkx==3.3
+pydot==2.0.0
+python-louvain==0.16
+scipy==1.14.0
+pygraphviz==1.13
+matplotlib==3.9.1
+seaborn==0.13.2
+flask==3.0.3
