--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,9 @@ jupyter==1.0.0
 pandas==2.2.2
 numpy==2.0.0
 networkx==3.3
-pydot==2.0.0
+#pydot==2.0.0
 python-louvain==0.16
 scipy==1.14.0
-pygraphviz==1.13
-matplotlib==3.9.1
-seaborn==0.13.2
-flask==3.0.3
+#pygraphviz==1.13
+#matplotlib==3.9.1
+#seaborn==0.13.2
